--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
@@ -24,8 +25,7 @@ task clean(type: Delete) {
 ext {
     buildToolsVersion = "26.0.0"
     supportVersion = "25.3.1"
-    archLifecycleVersion = "1.0.0-alpha3"
-    archRoomVersion = "1.0.0-alpha3"
+    archComponentVersion = "1.0.0-alpha5"
     retrofitVersion = "2.3.0"
     okHttpVersion = "3.8.0"
     daggerVersion = "2.11"
